argocd/status/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status
  namespace: status
  labels:
    app: status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: status
  template:
    metadata:
      labels:
        app: status
    spec:
      containers:
      - name: gatus
        image: ghcr.io/twin/gatus:stable
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        configMap:
          name: gatus-config
---
apiVersion: v1
kind: Service
metadata:
  name: status
  namespace: status
  labels:
    app: status
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: status
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status
  namespace: status
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - secretName: status-tls
      hosts:
        - status.kamos.freeddns.org
  rules:
  - host: status.kamos.freeddns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: status
            port:
              number: 80
